# crawl

./: .gitignore  CLAUDE_CODE_PROMPT.md  HANDOFF.md  README.md  main.py  pyproject.toml
config/: config.yaml
docs/: Crawl_Engine_Backlog.xlsx  RUNBOOK.md  crawl_engine_backlog.csv
src/crawl_engine/: __init__.py
src/crawl_engine/config/: loader.py
src/crawl_engine/discovery/: __init__.py  canonicalize.py  links.py  queue.py  registry.py
src/crawl_engine/extraction/: __init__.py  fetcher.py  parser.py
src/crawl_engine/logging/: logger.py
src/crawl_engine/reliability/: __init__.py  checkpoint.py  crawler.py
src/crawl_engine/storage/: __init__.py  markdown.py  paths.py  writer.py
tests/integration/: conftest.py  test_end_to_end.py  test_live_server.py
tests/unit/: test_canonicalize.py  test_checkpoint.py  test_config.py  test_crawler.py  test_fetcher.py  test_links.py  test_logger.py  test_markdown.py  test_parser.py  test_paths.py  test_queue.py  test_registry.py  test_robustness.py  test_writer.py
